--- a/download_images.ipynb
+++ b/download_images.ipynb
@@ -119,7 +119,7 @@
       },
       "outputs": [],
       "source": [
-        "# df = pd.read_csv('/home/fx/1_Fx_Ongoing_Client_Inquires/Image Search Engine/All_Images_URL.csv')"
+        "# df = pd.read_csv('Image Search Engine/All_Images_URL.csv')"
       ]
     },
     {
@@ -141,7 +141,7 @@
         "#       img_sep = str(x[2]).replace('/', ' ').split(' ')\n",
         "#       im = Image.fromarray(img)\n",
         "#       img_filename = str(img_sep[-1])\n",
-        "#       full_path_img = os.path.join('/home/fx/1_Fx_Ongoing_Client_Inquires/Image Search Engine/img_datasets',img_filename)\n",
+        "#       full_path_img = os.path.join('Image Search Engine/img_datasets',img_filename)\n",
         "#       im.save(full_path_img)\n",
         "#       # print(img_filename,'saved..! and count =',count)\n",
         "#       count+=1\n",
@@ -169,7 +169,7 @@
       },
       "outputs": [],
       "source": [
-        "base_images=\"/home/fx/1_Fx_Ongoing_Client_Inquires/Image Search Engine/img_datasets/\""
+        "base_images=\"/Image Search Engine/img_datasets/\""
       ]
     },
     {
@@ -252,7 +252,7 @@
         "#   files_image_array=[] \n",
         "#   for i in range(10):\n",
         "#     files_image_array.append(extract_features(base_images+str(final[j][i])))\n",
-        "#     pickle.dump(files_image_array,open(\"/home/fx/1_Fx_Ongoing_Client_Inquires/Image Search Engine/features_files/\"+\"feature_list\"+str(j)+\".pkl\",\"wb\"))"
+        "#     pickle.dump(files_image_array,open(\"/Image Search Engine/features_files/\"+\"feature_list\"+str(j)+\".pkl\",\"wb\"))"
       ]
     },
     {
@@ -265,7 +265,7 @@
       "source": [
         "# final_files_image_array= []\n",
         "# for i in range(2928):\n",
-        "#   with open(\"/home/fx/1_Fx_Ongoing_Client_Inquires/Image Search Engine/features_files/\"+\"feature_list\"+str(i)+\".pkl\",\"rb\") as feature:\n",
+        "#   with open(\"features_files/\"+\"feature_list\"+str(i)+\".pkl\",\"rb\") as feature:\n",
         "#     feature_list=pickle.load(feature)\n",
         "#     final_files_image_array.extend(feature_list)\n",
         "# print(len(final_files_image_array))"
@@ -279,7 +279,7 @@
       },
       "outputs": [],
       "source": [
-        "# pickle.dump(final_files_image_array,open(\"/home/fx/1_Fx_Ongoing_Client_Inquires/Image Search Engine/features_files\"+\"/final_features_file.pkl\",\"wb\"))"
+        "# pickle.dump(final_files_image_array,open(\"Image Search Engine/features_files\"+\"/final_features_file.pkl\",\"wb\"))"
       ]
     },
     {
@@ -290,7 +290,7 @@
       },
       "outputs": [],
       "source": [
-        "with open(\"/home/fx/1_Fx_Ongoing_Client_Inquires/Image Search Engine/features_files/features_file.pkl\",\"rb\") as feature:\n",
+        "with open(\"Image Search Engine/features_files/features_file.pkl\",\"rb\") as feature:\n",
         "  feature_list=pickle.load(feature)"
       ]
     },
