--- a/Notebooks_Files/Similar_Marbles_Demo.ipynb
+++ b/Notebooks_Files/Similar_Marbles_Demo.ipynb
@@ -26,11 +26,11 @@
           "text": [
             "2022-12-05 16:12:11.937927: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
             "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "2022-12-05 16:12:12.060038: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/fx/.local/lib/python3.8/site-packages/cv2/../../lib64:\n",
+            "2022-12-05 16:12:12.060038: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: .local/lib/python3.8/site-packages/cv2/../../lib64:\n",
             "2022-12-05 16:12:12.060054: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
             "2022-12-05 16:12:12.082581: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-            "2022-12-05 16:12:12.649959: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/fx/.local/lib/python3.8/site-packages/cv2/../../lib64:\n",
-            "2022-12-05 16:12:12.650025: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/fx/.local/lib/python3.8/site-packages/cv2/../../lib64:\n",
+            "2022-12-05 16:12:12.649959: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: .local/lib/python3.8/site-packages/cv2/../../lib64:\n",
+            "2022-12-05 16:12:12.650025: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: .local/lib/python3.8/site-packages/cv2/../../lib64:\n",
             "2022-12-05 16:12:12.650044: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
           ]
         }
@@ -69,7 +69,7 @@
       },
       "outputs": [],
       "source": [
-        "base_images=\"/home/fx/1_Fx_Ongoing_Client_Inquires/Image Search Engine/Original_Dataset_9K/\""
+        "base_images=\"Image Search Engine/Original_Dataset_9K/\""
       ]
     },
     {
